syntax = "proto3";

package auth;
option go_package = "goads/internal/url-shortener/proto";
import "google/protobuf/empty.proto";

service ShortenerService {
  rpc Create(CreateRequest) returns (LinkResponse) {}
  rpc GetByID(GetByIDRequest) returns (LinkResponse) {}
  rpc GetByAuthor(GetByAuthorRequest) returns (ListLinkResponse) {}
  rpc GetByAlias(GetByAliasRequest) returns (LinkResponse) {}
  rpc UpdateAlias(UpdateAliasRequest) returns (LinkResponse) {}
  rpc Delete(UpdateAliasRequest) returns (google.protobuf.Empty) {}
}

message LinkResponse {
  int64 id = 1;
  string url = 2;
  string alias = 3;
  int64 authorID = 4;
  repeated int64 ads = 5;
}

message ListLinkResponse {
  repeated LinkResponse list = 1;
}

message CreateRequest {
  string url = 1;
  string alias = 2;
  int64 authorID = 3;
  repeated int64 ads = 4;
}

message GetByIDRequest {
  int64 id = 1;
}

message GetByAuthorRequest {
  int64 authorID = 1;
}

message GetByAliasRequest {
  string alias = 1;
}

message UpdateAliasRequest {
  int64 id = 1;
  string alias = 2;
}

message DeleteRequest {
  int64 id = 1;
}
